# uuid

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  lib.ring  main.ring  package.ring
.github/workflows/: freebsd_build.yml  macos_build.yml  main.yml  testCI.yml  ubuntu_build.yml  windows_build.yml
examples/: 01_basic_generation.ring  02_validation.ring  03_nil_uuid.ring  04_bytes_conversion.ring  05_comprehensive.ring  06_sqlite_uuid.ring
src/: uuid.ring  uuid_test.ring
src/c_src/: ring_uuid.cpp
src/utils/: color.ring  install.ring  uninstall.ring
